<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_medium"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/register_username"
        style="@style/DialogStyle"
        android:ems="10"
        android:hint="@string/username" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/register_email"
        style="@style/DialogStyle"
        android:ems="10"
        android:hint="@string/email_optional"
        android:inputType="textEmailAddress" />

    <TextView
        style="@style/DialogStyle"
        android:text="@string/email_info" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="register"
        android:text="@string/start" />

    <TextView
        android:id="@+id/existing_account"
        style="@style/DialogStyle"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/login_existing"
        android:textStyle="bold" />

</LinearLayout>