<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_large"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/login_email"
        style="@style/DialogStyle"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_retrieve_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="sendKey"
        android:text="@string/login_key_send" />

    <EditText
        android:id="@+id/login_key"
        style="@style/DialogStyle"
        android:layout_marginTop="@dimen/margin_large"
        android:ems="10"
        android:hint="@string/login_key" />

    <Button
        android:id="@+id/button_login_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start" />

</LinearLayout>